[package]
name = "allicante-gateway"
version = "0.1.0"
authors = ["Jens Reidel <adrian@travitia.xyz>", "Dominic Harris <dominic@mail.dominiquecat.com>"]
edition = "2018"
license = "AGPL-3.0"
license_file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
