[package]
name = "allicante-gateway"
version = "0.1.0"
authors = ["Jens Reidel <adrian@travitia.xyz>", "Dominic Harris <dominic@mail.dominiquecat.com>"]
edition = "2018"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix = "0.9.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
env_logger = "0.7"
